# uni-codebase

./: .gitignore  ]  diplomas.md  distributed-exam.md  productive-exam.md
.ccls-cache/@@home@jorres@work@uni-codebase/: @snap@ccls@80@usr@lib@llvm-7@lib@clang@7.0.0@include@__stddef_max_align_t.h.blob  @snap@ccls@80@usr@lib@llvm-7@lib@clang@7.0.0@include@stdarg.h.blob  @snap@ccls@80@usr@lib@llvm-7@lib@clang@7.0.0@include@stddef.h.blob  @snap@ccls@80@usr@lib@llvm-7@lib@clang@7.0.0@include@stdint.h.blob  @usr@include@alloca.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@assert.h.blob  @usr@include@c++@9@array.blob  @usr@include@c++@9@backward@binders.h.blob  @usr@include@c++@9@bits@alloc_traits.h.blob  @usr@include@c++@9@bits@allocated_ptr.h.blob  @usr@include@c++@9@bits@allocator.h.blob  @usr@include@c++@9@bits@basic_ios.h.blob  @usr@include@c++@9@bits@basic_ios.tcc.blob  @usr@include@c++@9@bits@basic_string.h.blob  @usr@include@c++@9@bits@basic_string.tcc.blob  @usr@include@c++@9@bits@char_traits.h.blob  @usr@include@c++@9@bits@concept_check.h.blob  @usr@include@c++@9@bits@cpp_type_traits.h.blob  @usr@include@c++@9@bits@cxxabi_forced.h.blob  @usr@include@c++@9@bits@cxxabi_init_exception.h.blob  @usr@include@c++@9@bits@erase_if.h.blob  @usr@include@c++@9@bits@exception.h.blob  @usr@include@c++@9@bits@exception_defines.h.blob  @usr@include@c++@9@bits@exception_ptr.h.blob  @usr@include@c++@9@bits@functexcept.h.blob  @usr@include@c++@9@bits@functional_hash.h.blob  @usr@include@c++@9@bits@hash_bytes.h.blob  @usr@include@c++@9@bits@hashtable.h.blob  @usr@include@c++@9@bits@hashtable_policy.h.blob  @usr@include@c++@9@bits@invoke.h.blob  @usr@include@c++@9@bits@ios_base.h.blob  @usr@include@c++@9@bits@istream.tcc.blob  @usr@include@c++@9@bits@list.tcc.blob  @usr@include@c++@9@bits@locale_classes.h.blob  @usr@include@c++@9@bits@locale_classes.tcc.blob  @usr@include@c++@9@bits@locale_facets.h.blob  @usr@include@c++@9@bits@locale_facets.tcc.blob  (+163 more)
cpp-sems-combined/: .gitignore  README.md  effective_cpp_conspect.txt
cpp-sems-combined/gai-server-3-sem/: .gitignore  CMakeLists.txt  README.md  client.cpp  config.h  epoll_and_sockets.h  epoll_handler.cpp  helpers.cpp  helpers.h  main.cpp  network_exception.h  server.cpp  stdlib_includes.h
cpp-sems-combined/huffman/: .gitignore  CMakeLists.txt  exception.h  huffman.cpp  huffman_test.cpp  lib_huffman.cpp  lib_huffman.h  reader.h  writer.h
cpp-sems-combined/std-list/: CMakeLists.txt  fault_injection.cpp  iterators.h  list.h  std.cpp  tests.inl
cpp-sems-combined/std-list/gtest/: CMakeLists.txt  Makefile  cmake_install.cmake
cpp-sems-combined/std-set/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  counted.cpp  counted.h  fault_injection.cpp  iterators.h  right_set.cpp  set.h  show_coverage.sh  std.cpp  tests.inl  tmp_iterators.h  tmp_set.h
cpp-sems-combined/std-set/gtest/: Makefile  cmake_install.cmake
db/: db.md
evolut/: Makefile  a.cpp  b.cpp  b_checker.cpp  checker.cpp  checker.h  exec  thoughts.txt
functional/: A.hs  B.hs  gadt.hs
haskell-stepik/: .test.hs.swp  EnummedOdd.hs  change.hs  conspect.txt  customoperator.hs  dist_seqa.hs  factorisation.hs  fibStream.hs  group_elems.hs  integrate.hs  oddOnly.hs  perms.hs  printable.hs  replicate.hs  same_f.hs  sumncount.hs  syntax.txt  test_no_module.hs
java/: cppvsjava.txt
js-csc-5-sem/: .arcadiy_warmup.js.swp  arcadiy_warmup.js  emitter.js  lib.js  package-lock.json  pbql.js  robbery.js  test.js
ml-5-sem/: .gitignore
networks/: networking-labs.ovpn  setup-connection.sh
pcms/: stress.sh
practice-7-sem/: notes.md  Индивидуальное задание.docx  Инструкция 4 курс.docx  Отзыв.docx  Отчет.docx  СоПД_согласие_обработка_персональных_данных.docx  зМТД_заявление_практика_по_МТД.doc  зП_заявление_перезачет.doc  заявка_к_договору_на_ПП_с_1_01_2021_2_2.docx  шаблон_договора_Университет_ИТМО_с_1_01_2021_1.docx
shell-scripts-3-sem/: codestyle.txt
software-design/: lecture-01.md
verstka/: graphics.txt
(+4016 files in other folders)
